--- a/infra/gateway/package.json
+++ b/infra/gateway/package.json
@@ -18,6 +18,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.19.8",
     "@types/node": "^22.9.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
