feat: ingress service implement (vibe-kanban 4a916c8d)
implement `INGRESS_PLAN.md`

`gogo/docs/INGRESS_PLAN.md`

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,5 +33,52 @@ services:
         condition: service_healthy
     restart: always
 
+  orchestrator:
+    build:
+      context: ./orchestrator
+      dockerfile: Dockerfile
+    container_name: gogo_orchestrator
+    ports:
+      - "8080:8080"   # External API
+      - "8081:8081"   # Internal API (for ingress)
+    environment:
+      HTTP_PORT: "8080"
+      INTERNAL_PORT: "8081"
+      DATABASE_URL: "file:orchestrator.db?cache=shared&mode=rwc"
+      INGRESS_URL: "http://ingress:8091"
+      LITELLM_URL: "http://litellm:4000"
+      LOG_LEVEL: "info"
+    depends_on:
+      - litellm
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    restart: always
+
+  ingress:
+    build:
+      context: ./ingress
+      dockerfile: Dockerfile
+    container_name: gogo_ingress
+    ports:
+      - "8090:8090"   # WebSocket (external)
+      - "8091:8091"   # Internal HTTP (/internal/send, /health)
+    environment:
+      WS_PORT: "8090"
+      HTTP_PORT: "8091"
+      ORCHESTRATOR_URL: "http://orchestrator:8081"
+      API_KEY: ""
+      LOG_LEVEL: "info"
+    depends_on:
+      - orchestrator
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8091/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    restart: always
+
 volumes:
   postgres_data:
