--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -75,7 +75,7 @@ services:
       HTTP_PORT: "8080"
       INTERNAL_PORT: "8081"
       DATABASE_URL: ${ORCHESTRATOR_DATABASE_URL:-file:orchestrator.db?cache=shared&mode=rwc}
-      INGRESS_URL: "http://ingress:8091"
+      INGRESS_RPC_ADDR: "ingress:8091"
       LITELLM_URL: "http://litellm:4000"
       LITELLM_API_KEY: ${ORCHESTRATOR_LITELLM_API_KEY:-}
       AGENT_TIMEOUT_MS: ${AGENT_TIMEOUT_MS:-300000}
@@ -109,11 +109,11 @@ services:
     container_name: gogo_ingress
     ports:
       - "${INGRESS_WS_PORT:-8090}:8090"
-      - "${INGRESS_HTTP_PORT:-8091}:8091"
+      - "${INGRESS_RPC_PORT:-8091}:8091"
     environment:
       WS_PORT: "8090"
-      HTTP_PORT: "8091"
-      ORCHESTRATOR_URL: "http://orchestrator:8081"
+      RPC_PORT: "8091"
+      ORCHESTRATOR_RPC_ADDR: "orchestrator:8081"
       API_KEY: ${INGRESS_API_KEY:-}
       WS_PING_INTERVAL_MS: ${WS_PING_INTERVAL_MS:-30000}
       WS_WRITE_TIMEOUT_MS: ${WS_WRITE_TIMEOUT_MS:-10000}
@@ -124,7 +124,7 @@ services:
       orchestrator:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8091/health"]
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8090/health"]
       interval: 10s
       timeout: 5s
       retries: 3
